--- a/Profile.html
+++ b/Profile.html
@@ -71,6 +71,15 @@
       <p>Nullclass — Web Development Intern (June 2023 - Aug 2023)<br> Nakshatra Neotech — Frontend Intern (Jan 2025 - May 2025)</p>
     </section>
 
+    <section id="certifications" class="card" aria-labelledby="certifications-heading">
+      <h2 id="certifications-heading">Certifications</h2>
+      <ul>
+        <li>Microsoft Certified: Fabric Analytics Engineer Associate</li>
+        <li>Google IT Automation with Python Specialization</li>
+        <li>AWS Cloud Practitioner Essentials</li>
+      </ul>
+    </section>
+
     <section id="training" class="card" aria-labelledby="training-heading">
       <h2 id="training-heading">Thinkbridge Assessment Program — Days 1 through 4</h2>
 
